# qerc

./: .gitignore  README.md  elm_data.py  elm_optimize.py  hamiltonian_block_structure.py  ising.py  mnist_elm.py  mnist_encode.py  mnist_evolve.py  mnist_mlp.py  mnist_observe.py  mnist_perceptron.py  mnist_plot.py  mnist_qubit.py  observer.py  pca_mnist_nosklearn.py  pyproject.toml  qerc_paralell.sh
analyze/: plotter.py
elm/: elm.py  elm_data.py
encoder/: qubit_mnist.py
example/mnist/: mnist_elm.py  mnist_encode.py  mnist_evolve.py  mnist_observe.py  mnist_perceptron.py  mnist_plot.py
nnetwork/: elm.py  mlp.py  nn.py  perceptron.py
reservoir/: evolver.py  hamiltonians.py  observer.py  qubit_mnist.py
src/qerc/analyze/: plotter.py
src/qerc/classifier/: elm.py  mlp.py  nn.py  nndata.py  perceptron.py
src/qerc/encoder/: encoder.py  qubit_mnist.py
src/qerc/measurement/: observer.py
src/qerc/reservoir/: evolver.py  hamiltonians.py
